2012-01-29  Paul Smith  <psmith@gnu.org>

	* gmk-default.scm (to-string-maybe): Variables map to empty strings.
	In Guile 2.0, (define ...) results in a variable object so make
	sure that maps to an empty string in make.

	* variable.c (parse_variable_definition): New POSIX assignment ::=
	Take a struct variable to return more information after parsing.
	(assign_variable_definition): New parse_variable_definition() call.
	* variable.h: New declaration of parse_variable_definition().
	* read.c (do_define): New parse_variable_definition() call.
	(parse_var_assignment): Ditto.
	(get_next_mword): Parse ::= as a variable assignment.
	* doc/make.texi (Flavors): Describe the new ::= syntax.
	* NEWS: Mention the ::= operator.

	* variable.h (struct variable): Rearrange elts to reduce struct size.

	* function.c (func_file): Create a new function, $(file ...)
	* doc/make.texi (File Function): Document the $(file ..) function.
	* NEWS: Announce it.

	* gmk-default.scm (to-string-maybe): Use a more portable way to
	test for unprintable characters.
	* configure.in [GUILE]: Guile 1.6 doesn't have pkg-config
	* build_w32.bat: Ditto.

2012-01-28  Eli Zaretskii  <eliz@gnu.org>

	* config.h.W32.template: Update from config.h.in.

	Support a Windows build with Guile.

	* README.W32.template: Update with instructions for building with
	Guile.

	* build_w32.bat: Support building with Guile.

	* make.h [HAVE_STDINT_H]: Include stdint.h.

	* main.c (main, clean_jobserver): Move declarations of variables
	not used in the WINDOWS32 build to the #else branch, to avoid
	compiler warnings.

	Fix failures on MS-Windows when Make's standard handles are invalid.
	This can happen when Make is invoked from a GUI application.

	* w32/subproc/sub_proc.c (process_init_fd): Don't dereference
	pproc if it is a NULL pointer.
	(process_begin, process_cleanup): Don't try to close pipe handles
	whose value is INVALID_HANDLE_VALUE.
	(process_easy): Initialize hIn, hOut, and hErr to